fixed bg-images visual on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1137,7 +1137,7 @@ blockquote {
     margin-top: 0.67em;
   }
   .page-title {
-    padding: 180px 0 80px;
+    /* padding: 180px 0 80px; */
     text-align:center;
   }
 }
